; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_gif_parser.c_gif_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_gif_parser.c_gif_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i32**, i32*, i32*, i32)* @gif_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gif_parse(%struct.TYPE_6__* %0, i32* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_5__*, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %14, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %20 = load i32*, i32** %12, align 8
  %21 = load i32, i32* %13, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @gif_find_frame_end(%struct.TYPE_5__* %19, i32* %20, i32 %21, i32* %22)
  store i32 %23, i32* %15, align 4
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 1
  %26 = load i32, i32* %15, align 4
  %27 = call i64 @ff_combine_frame(i32* %25, i32 %26, i32** %12, i32* %13)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %6
  %30 = load i32**, i32*** %10, align 8
  store i32* null, i32** %30, align 8
  %31 = load i32*, i32** %11, align 8
  store i32 0, i32* %31, align 4
  %32 = load i32, i32* %13, align 4
  store i32 %32, i32* %7, align 4
  br label %44

33:                                               ; preds = %6
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 8
  %39 = load i32*, i32** %12, align 8
  %40 = load i32**, i32*** %10, align 8
  store i32* %39, i32** %40, align 8
  %41 = load i32, i32* %13, align 4
  %42 = load i32*, i32** %11, align 8
  store i32 %41, i32* %42, align 4
  %43 = load i32, i32* %15, align 4
  store i32 %43, i32* %7, align 4
  br label %44

44:                                               ; preds = %33, %29
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i32 @gif_find_frame_end(%struct.TYPE_5__*, i32*, i32, i32*) #1

declare dso_local i64 @ff_combine_frame(i32*, i32, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
